# echovessel

./: .gitignore  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  README.zh.md  SECURITY.md  hatch_build.py  pyproject.toml
.github/workflows/: ci.yml  notify-blog-rebuild.yml
docs/: README.md  architecture-flow.html  architecture.html
docs/en/: README.md  channels.md  configuration.md  contributing.md  first-time-setup.md  import.md  memory-testing.md  memory.md  proactive.md  runtime.md  voice.md
docs/memory/: layers.html
docs/zh/: README.md  channels.md  configuration.md  contributing.md  first-time-setup.md  import.md  memory-testing.md  memory.md  proactive.md  runtime.md  voice.md
scripts/: build_frontend.sh
src/echovessel/: __init__.py  __main__.py
src/echovessel/channels/: __init__.py  base.py
src/echovessel/channels/discord/: __init__.py  bot.py  channel.py
src/echovessel/channels/imessage/: __init__.py
src/echovessel/channels/web/: __init__.py  app.py  channel.py  sse.py
src/echovessel/core/: __init__.py  config_paths.py  types.py
src/echovessel/import_/: __init__.py  chunking.py  embed.py  errors.py  extraction.py  models.py  normalization.py  pipeline.py  routing.py
src/echovessel/memory/: __init__.py  backend.py  consolidate.py  db.py  events.py  forget.py  imports.py  ingest.py  migrations.py  models.py  mood.py  observers.py  retrieve.py  sessions.py  tokens.py
src/echovessel/proactive/: __init__.py  audit.py  base.py  config.py  delivery.py  errors.py  factory.py  generator.py  policy.py  queue.py  scheduler.py
src/echovessel/prompts/: __init__.py  extraction.py  judge.py  persona_bootstrap.py  reflection.py
src/echovessel/resources/: __init__.py  config.toml.sample  env.sample
src/echovessel/runtime/: __init__.py  app.py  channel_registry.py  config.py  consolidate_worker.py  control.py  cost_logger.py  idle_scanner.py  importer_facade.py  interaction.py  launcher.py  memory_facade.py  memory_observers.py  persona_extraction.py  prompts_wiring.py  turn_dispatcher.py
src/echovessel/runtime/llm/: base.py  (+7 more)
src/echovessel/voice/: __init__.py  base.py  cloning.py  errors.py  factory.py  fishaudio.py  models.py  pricing.py  service.py  stub.py  whisper_api.py
tests/: conftest.py
tests/channels/: test_protocol_compliance.py  test_web_channel.py
tests/channels/discord/: test_discord_bot_allowlist.py  test_discord_channel_debounce.py  test_discord_channel_dm_routing.py  test_discord_channel_missing_import.py  test_discord_channel_protocol_compliance.py  test_voice_delivery.py
tests/channels/web/: test_admin_config_routes.py  test_admin_cost_routes.py  test_admin_routes.py  test_admin_search_routes.py  test_admin_trace_routes.py  test_admin_voice_routes.py  test_chat_routes.py  test_persona_bootstrap_routes.py  test_sse_broadcaster.py  test_voice_route.py  test_voice_sse.py  test_webchannel_sse_integration.py
tests/cli/: __init__.py  test_init.py
tests/eval/: __init__.py  corpus_loader.py  fixtures.py  llm_stub_recordings.py  metrics.py  report.py  run_baseline.py  scenario.py  test_corpus_loader.py  test_metrics.py  test_scenario.py
tests/import_/: __init__.py  conftest.py  test_chunking_csv_batch.py  test_chunking_paragraph_split.py  test_chunking_sliding_window.py  test_embed_pass_after_write.py  test_extraction_stub_llm_roundtrip.py  test_facade_cancel_pipeline.py  test_facade_start_pipeline.py  test_normalization_invalid_utf8.py  test_normalization_json_conversation.py  test_normalization_md_frontmatter.py  test_normalization_txt.py  test_pipeline_end_to_end_stub.py  test_pipeline_resume_safety.py  test_routing_five_content_types.py  test_routing_unknown_content_type_raises.py
tests/integration/: test_cross_channel_unified_persona.py  test_wave_abc_composition.py  test_web_e2e_smoke.py
tests/memory/: test_concept_nodes_check_constraint.py  test_concept_nodes_imported_from.py  test_concept_nodes_source_turn_id.py  test_config_wiring.py  test_consolidate.py  test_core_block_appends_audit.py  test_engine_pragmas.py  test_events_module_reexport.py  test_forget.py  test_ingest.py  test_lifecycle_observer_exception_swallowed.py  test_lifecycle_on_mood_updated.py  test_lifecycle_on_new_session_started.py  test_lifecycle_on_session_closed.py  test_migrations_from_old_db.py  test_migrations_idempotent.py  test_observer_called.py  test_recall_messages_turn_id.py  test_register_unregister_roundtrip.py  test_retrieve.py  test_schema.py  test_sessions_concurrency.py  test_stage1_facts_addons.py  test_stage2_concurrency_and_catchup.py  test_stage3_consolidate_addons.py  test_stage4_reflect.py  test_stage5_retrieve_addons.py
tests/memory_eval/: harness.py  judge.py  synthesize.py  test_eval_fixtures.py
tests/perf/: test_llm_latency.py
tests/proactive/: __init__.py  fakes.py  test_audit.py  test_base.py  test_d4_no_channel_filter.py  test_delivery.py  test_f10_no_channel_in_prompt.py  test_factory.py  test_generator.py  test_policy.py  test_queue.py  test_round2_delivery_inheritance.py  test_round2_no_in_flight_turn.py  test_round2_removed_min_interval.py  test_scheduler.py
tests/prompts/: test_extraction.py  test_judge.py  test_reflection.py
tests/runtime/: test_app_round2.py  test_app_smoke.py  test_app_web_integration.py  test_assemble_turn_v04.py  test_channel_registry.py  test_config.py  test_consolidate_worker.py  test_control_plane.py  test_cost_logger.py  test_cross_channel_sse.py  test_d4_no_channel_filter.py  test_f10_no_channel_in_prompt.py  test_first_launch.py  test_idle_scanner.py  test_importer_facade.py  test_interaction.py  test_launcher_cli.py  test_llm_anthropic.py  test_llm_base.py  test_llm_openai_compat.py  test_llm_usage.py  test_local_first_disclosure.py  test_memory_facade.py  test_persona_voice_toggle.py  test_proactive_wiring_round3.py  test_prompts_wiring.py  test_sighup_reload.py  test_startup_round3.py  test_voice_delivery.py
tests/voice/: test_base.py  test_cloning.py  test_errors.py  test_factory.py  test_fishaudio.py  test_generate_voice.py  test_service.py  test_stub.py  test_whisper_api.py
(+46 files in other folders)
