[project]
name = "echovessel"
version = "0.0.1"
description = "Local-first digital persona engine with long-term memory, voice, and channel integrations"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
    { name = "EchoVessel" }
]
keywords = [
    "ai",
    "persona",
    "digital-companion",
    "local-first",
    "memory",
    "llm",
    "voice",
    "sqlite",
    "rag",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]

dependencies = [
    "sqlmodel>=0.0.22",
    "sqlalchemy>=2.0.30",
    "pydantic>=2.7",
    "sqlite-vec>=0.1.3",
    "tiktoken>=0.7",
    "click>=8.1",
    "rich>=13.7",
    # Runtime atomically writes config.toml when persona voice_enabled
    # toggles. tomllib in stdlib is read-only; tomli_w provides the write
    # side.
    "tomli_w>=1.0",
    # Web channel: FastAPI serves the embedded React frontend as static
    # files and exposes the chat + admin API. uvicorn runs the ASGI server
    # in the same asyncio event loop as the daemon. sse-starlette provides
    # the server-sent-events transport for streaming token deltas.
    # python-multipart is required by FastAPI for form/file uploads on the
    # admin import endpoint.
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "sse-starlette>=2.1",
    "python-multipart>=0.0.9",
]

[project.optional-dependencies]
embeddings = [
    "sentence-transformers>=3.0",
]
llm = [
    "anthropic>=0.40",
    "openai>=1.30",
]
voice = [
    # fish-audio-sdk is sync-only; `voice/fishaudio.py` wraps every call
    # in `asyncio.to_thread`, which is the ONLY legal blocking-I/O
    # exception in the voice module. STT uses `openai` from the [llm]
    # extra, so no additional STT dependency here.
    "fish-audio-sdk>=1.3.0",
]
discord = [
    # Optional Discord DM channel. Users who only use the Web channel do
    # not need to install this — the runtime imports discord.py lazily
    # and logs an error if `[channels.discord].enabled = true` but the
    # package is missing.
    "discord.py>=2.3",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.5",
    "import-linter>=2.0",
    "alembic>=1.13",
    # Test-only: FastAPI's TestClient and httpx.AsyncClient ASGI
    # transport are the standard way to hit Stage 2 FastAPI routes
    # without binding real sockets. Not a runtime dependency.
    "httpx>=0.27",
]

[project.scripts]
echovessel = "echovessel.__main__:main"

[project.urls]
Homepage = "https://github.com/AlanY1an/echovessel"
Repository = "https://github.com/AlanY1an/echovessel"
Issues = "https://github.com/AlanY1an/echovessel/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# Tell hatchling to include the built frontend output even though it's
# gitignored. Hatchling's default file-discovery uses .gitignore as the
# source of truth — without this line, `src/echovessel/channels/web/static/*`
# (vite build output) would be silently dropped from both sdist and
# wheel because the .gitignore rule marks everything under static/
# except `.gitkeep`.
#
# The `artifacts` list is shared across all build targets (sdist + wheel)
# and overrides .gitignore on a per-glob basis.
[tool.hatch.build]
artifacts = [
    "src/echovessel/channels/web/static/**",
    # The packaged config sample used by `echovessel init`. Lives under
    # src/echovessel/resources/ so importlib.resources.files() can find
    # it after a wheel install. Without this artifacts entry hatchling's
    # default wheel build drops non-``.py`` files — it uses .gitignore as
    # the file-discovery source of truth and resources/ is not ignored,
    # but non-``.py`` files still need an explicit include rule to land
    # in the wheel.
    "src/echovessel/resources/config.toml.sample",
]

[tool.hatch.build.targets.wheel]
packages = ["src/echovessel"]
exclude = [
    # React prototype source lives under channels/web/frontend/ but is NOT
    # shipped in the Python wheel — it's a reference UI that runs
    # independently via `npm run dev`. Excluding `node_modules/` drops
    # ~90MB and ~2600 files from the wheel. The built output (`static/`)
    # is force-included below via `[tool.hatch.build.targets.wheel.force-include]`
    # so end users get the React bundle embedded in the wheel without
    # needing Node themselves.
    "src/echovessel/channels/web/frontend/**",
    # Note: `.gitkeep` still lands in the wheel (0 bytes) because the
    # top-level `[tool.hatch.build].artifacts` rule force-includes
    # everything under static/. Excluding it here has no effect
    # since artifacts overrides the exclude list. The 0-byte sentinel
    # is harmless in the shipped wheel and simplifies the include
    # logic by keeping `artifacts` as the single source of truth.
    "**/__pycache__/**",
    "**/*.pyc",
    "**/*.pyo",
    "**/.DS_Store",
]

# The built frontend (`static/**`) is included via the top-level
# `[tool.hatch.build].artifacts` list above, not via
# `[tool.hatch.build.targets.wheel.force-include]`. Using artifacts
# keeps a single source of truth for the gitignored build output and
# avoids "Duplicate name" warnings from `zipfile` when both
# mechanisms would match the same path.

# Custom build hook that runs `npm run build` before packaging the
# wheel so releases always embed a fresh frontend. The hook is a no-op
# if `npm` is missing on PATH — see hatch_build.py for the full
# fallback contract.
[tool.hatch.build.targets.wheel.hooks.custom]
path = "hatch_build.py"

# Same hook for sdist builds. `uv build` without flags runs sdist →
# wheel as a two-phase flow where phase 2 extracts the sdist into a
# temp directory and builds the wheel from the extracted tree. That
# extracted tree lacks `frontend/` (sdist-excluded) and would therefore
# have no way to produce fresh static output. Running the hook during
# sdist build ensures `static/` is already populated on the source
# tree before the sdist gets archived, so the extracted sdist contains
# the built frontend and phase 2 can resolve the force-include target.
[tool.hatch.build.targets.sdist.hooks.custom]
path = "hatch_build.py"

[tool.hatch.build.targets.sdist]
# Note: `src/echovessel/channels/web/static/**` is handled by the
# top-level `[tool.hatch.build].artifacts` rule above, not listed here.
# That single declaration covers both sdist and wheel targets, so the
# built frontend survives the sdist→wheel two-phase build flow of
# `uv build`.
include = [
    "src/echovessel/**/*.py",
    "src/echovessel/**/*.pyi",
    # Bundled resource files that `echovessel init` reads via
    # importlib.resources. Currently just the starter config sample;
    # any future bundled resources (prompt templates, example corpora)
    # should land here too.
    "src/echovessel/resources/*.toml.sample",
    # Include the hatch build hook + frontend build script so contributors
    # can rebuild the frontend from an extracted sdist if they have
    # Node.js installed.
    "hatch_build.py",
    "scripts/build_frontend.sh",
    "README.md",
    "LICENSE",
    "pyproject.toml",
]
exclude = [
    # Dev-only trees that must NEVER land in the source distribution.
    ".venv/**",
    ".uv-cache/**",
    "dist/**",
    "build/**",
    "**/node_modules/**",
    "docs/memory/eval-runs/**",
    ".import_linter_cache/**",
    ".pytest_cache/**",
    ".ruff_cache/**",
    "**/__pycache__/**",
    "**/*.pyc",
    "**/*.pyo",
    "**/.DS_Store",
    "*.log",
    "src/echovessel/channels/web/frontend/**",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "N", "UP", "B", "C4", "SIM"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.importlinter]
root_package = "echovessel"

[[tool.importlinter.contracts]]
name = "Layered architecture: runtime -> channels|proactive -> memory|voice -> core"
type = "layers"
layers = [
    "echovessel.runtime",
    "echovessel.channels | echovessel.proactive",
    "echovessel.memory | echovessel.voice",
    "echovessel.core",
]

# Proactive may import memory, voice, channels Protocol, and core — the
# layered contract above allows those because proactive sits above them.
# What it must NEVER import is runtime or prompts. This forbidden contract
# catches any regression where a future edit sneaks `from echovessel.runtime`
# or `from echovessel.prompts` into src/echovessel/proactive/**.

[[tool.importlinter.contracts]]
name = "Proactive must not import runtime or prompts"
type = "forbidden"
source_modules = ["echovessel.proactive"]
forbidden_modules = [
    "echovessel.runtime",
    "echovessel.prompts",
]
